--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,10 @@
 <body>
 	<h1>SES Test Email</h1>
 	<form method="post">
+
+		<label for="ses_smtp_server">SES smtp server:</label>
+		<input type="text" name="ses_smtp_server" required>
+
 		<label for="ses_access_key">SES Access Key:</label>
 		<input type="text" name="ses_access_key" required>
 
